# Pelican-ETL

./: .gitignore  README.md  pyproject.toml  sample.enex
cli/: clean.sh  etl.py
src/: etl.py  extract.py  load.py  transform.py
src/pelican/: extract.py  load.py  models.py  transform.py
src/vault/: Note- sample.enex.md
test/: test_etl.py  test_extract.py  test_load.py  test_transform.py
