[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pelican-etl"
version = "0.1.0"
description = "ETL pipeline for Evernote → Obsidian"
readme = "README.md"
authors = [
    { name = "Nigel Deans" }
]
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "beautifulsoup4",
    "lxml"
]

[tool.setuptools.packages.find]
where = ["src"]
